--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "fast-xml-parser": "^5.4.1",
     "framer-motion": "^12.34.3",
     "genius-lyrics-api": "^3.2.1",
